--- a/src/components/MaternityPage/style.css
+++ b/src/components/MaternityPage/style.css
@@ -1,5 +1,6 @@
 
 
+
 .maternity-container{
     display: flex;
 	justify-content: center;
@@ -7,6 +8,14 @@
 	flex-wrap: wrap;
 	width: 95vw;
 	margin: 0 auto;
+}
+
+.page-title {
+	text-align: center;
+	margin-bottom: 2%;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: rgb(86, 81, 81);
+
 }
 
 
