--- a/src/components/FamilyPage/style.css
+++ b/src/components/FamilyPage/style.css
@@ -14,7 +14,7 @@
 	margin: 0 auto;
 }
 
-.family-col1,
+/* .family-col1,
 .family-col2,
 .family-col3 {
 	display: flex;
@@ -28,4 +28,4 @@
 .family1 {
 	max-width: 350px;
 	height: 300px;
-}
+} */
