--- a/src/components/WeddingPage/style.css
+++ b/src/components/WeddingPage/style.css
@@ -9,6 +9,13 @@
 	margin: 0 auto;
 }
 
+.page-title {
+	text-align: center;
+	margin-bottom: 2%;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: rgb(86, 81, 81);
+
+}
 
 .wedding-images {
     display: flex;
