--- a/src/components/AboutPage/style.css
+++ b/src/components/AboutPage/style.css
@@ -10,20 +10,15 @@
 	justify-content: center;
 	/* height: 700px; */
 	flex-wrap: wrap;
-	width: 95vw;
 	margin: 0 auto;
-}
-
-.about-title {
-	
 }
 
 .about-text {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 50%;
+	text-align: center;
+	width: 80%;
 	margin: 1rem;
 	line-height: 25px;
 }
-
