--- a/src/components/MaternityPage/style.css
+++ b/src/components/MaternityPage/style.css
@@ -28,3 +28,18 @@
 	row-gap: 4px;
 }
 
+.family-col1,
+.family-col2,
+.family-col3 {
+	display: flex;
+	flex-direction: column;
+	width: 350px;
+	height: 350px;
+	margin: 4px;
+	row-gap: 4px;
+}
+
+.family1 {
+	max-width: 350px;
+	height: 300px;
+}
